--- a/mk_dir.ipynb
+++ b/mk_dir.ipynb
@@ -2,57 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "from os import path\n",
     "import json\n",
-    "import random"
+    "import random\n",
+    "import numpy as np\n",
+    "from matplotlib import pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sqrt_N0\t= 28\n",
-    "N0 \t\t= 784\n",
-    "N1 \t\t= 800\n",
-    "P \t\t= 1600\n",
+    "sqrt_N0 = 42\n",
+    "N0      = int(sqrt_N0*sqrt_N0)\n",
+    "N1 \t\t= 500\n",
+    "P \t\t= 1000\n",
     "Ptest \t= 1000\n",
     "T \t\t= 0.01\n",
     "epsilon = 0.001\n",
     "bias \t= 0\n",
-    "NUM_MIS = 5000000\n",
+    "NUM_MIS = 5000\n",
     "sv_step = 10\n",
-    "BUFF_S \t= 1000\n",
+    "BUFF_S \t= 100\n",
     "lambda0 = 1.0\n",
-    "lambda1 = 1.0"
+    "lambda1 = 1.0\n",
+    "dataset = \"mnist\"\n",
+    "noise   = 0.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "directory esistente, non faccio nulla\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if (bias == 0):\n",
     "    bias_string = \"False\"\n",
     "else:\n",
     "    bias_string = \"True\"\n",
+    "\n",
+    "\n",
     "    \n",
-    "path = \"./data/\" + \"mnist_\" + str(N1) + \"_\" + str(P) + \"_\" + str(Ptest) + \"_\" + str(T) + \"_\" + str(epsilon) + \"_\" + bias_string  + \"_\" + str(lambda0) + \"_\" + str(lambda1)\n",
+    "path = \"./data/\" + dataset + \"_\" + str(sqrt_N0) + \"_\" + str(N1) + \"_\" + str(P) + \"_\" + str(Ptest) + \"_\" + str(T) + \"_\" + str(epsilon) + \"_\" + bias_string  + \"_\" + str(lambda0) + \"_\" + str(lambda1) + \"_\" + str(noise)\n",
     "\n",
     "if os.path.isdir(path):\n",
     "    print(\"directory esistente, non faccio nulla\")\n",
@@ -63,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +78,9 @@
     "\t\"sv_step\"\t:\tsv_step\t\t\t,\n",
     "\t\"BUFF_S\"\t:\tBUFF_S\t\t\t,\n",
     "    \"lambda0\"\t:\tlambda0\t\t\t,\n",
-    "    \"lambda1\"\t:\tlambda1\n",
+    "    \"lambda1\"\t:\tlambda1\t\t\t,\n",
+    "    \"dataset\"\t: \tdataset\t\t\t,\n",
+    "    \"noise\"\t\t:\tnoise\n",
     "}\n",
     "\n",
     "with open(path + \"/parameter.json\", \"w\") as fp:\n",
@@ -89,13 +89,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "string = \"./sbatch/starter_\" + str(N1) + \"_\" + str(P) + \"_\" + str(Ptest) + \"_\" + str(T) + \"_\" + str(epsilon) + \"_\" + bias_string  + \"_\" + str(lambda0) + \"_\" + str(lambda1) + \".bash\"\n",
+    "string = \"./sbatch/starter_\" + dataset + \"_\" + str(sqrt_N0) + \"_\" + str(N1) + \"_\" + str(P) + \"_\" + str(Ptest) + \"_\" + str(T) + \"_\" + str(epsilon) + \"_\" + bias_string  + \"_\" + str(lambda0) + \"_\" + str(lambda1) + \"_\" + str(noise) + \".bash\"\n",
     "\n",
-    "string_for_title = \"#SBATCH --job-name=nn_gpu_\" + str(N1) + \"_\" + str(P) + \"_\" + str(Ptest) + \"_\" + str(T) + \"_\" + str(epsilon) + \"_\" + bias_string  + \"_\" + str(lambda0) + \"_\" + str(lambda1) + \" \\n\\n\"\n",
+    "string_for_title = \"#SBATCH --job-name=nn_gpu_\" + dataset + \"_\" + str(sqrt_N0) + \"_\" + str(N1) + \"_\" + str(P) + \"_\" + str(Ptest) + \"_\" + str(T) + \"_\" + str(epsilon) + \"_\" + bias_string  + \"_\" + str(lambda0) + \"_\" + str(lambda1) + \"_\" + str(noise) + \" \\n\\n\"\n",
     "\n",
     "with open(string, 'w') as f:\n",
     "\tf.write('%s' % \"#!/bin/bash \\n\\n\")\n",
@@ -118,10 +118,30 @@
     "\n",
     "\tf.write('%s' % \"cd /hpc/home/paolo.baglioni/nn_ve \\n\")\n",
     "\tf.write('%s' % \"source bin/activate \\n\")\n",
-    "\tf.write('%s' % \"cd /hpc/home/paolo.baglioni/pietro_all_lambda/ \\n\\n\")\n",
+    "\tf.write('%s' % \"cd /hpc/home/paolo.baglioni/bayesian_FCN_prop/ \\n\\n\")\n",
     "\n",
-    "\tstring = \"python3 main.py \" + \"'/hpc/home/paolo.baglioni/try_finite_size/data/\" + \"mnist_\" + str(N1) + \"_\" + str(P) + \"_\" + str(Ptest) + \"_\" + str(T) + \"_\" + str(epsilon) + \"_\" + bias_string + \"_\" + str(lambda0) + \"_\" + str(lambda1) + \"/parameter.json' > '/hpc/home/paolo.baglioni/try_finite_size/data/\" + \"mnist_\" + str(N1) + \"_\" + str(P) + \"_\" + str(Ptest) + \"_\" + str(T) + \"_\" + str(epsilon) + \"_\" + bias_string + \"_\" + str(lambda0) + \"_\" + str(lambda1) + \"/std_output.txt' \\n\\n\"\n",
+    "\tstring = \"python3 main.py \" + \"'/hpc/home/paolo.baglioni/bayesian_FCN_prop/data/\" + dataset + \"_\" + str(sqrt_N0) + \"_\" + str(N1) + \"_\" + str(P) + \"_\" + str(Ptest) + \"_\" + str(T) + \"_\" + str(epsilon) + \"_\" + bias_string  + \"_\" + str(lambda0) + \"_\" + str(lambda1) + \"_\" + str(noise) + \"/parameter.json' > '/hpc/home/paolo.baglioni/bayesian_FCN_prop/data/\" + dataset + \"_\" + str(sqrt_N0) + \"_\" + str(N1) + \"_\" + str(P) + \"_\" + str(Ptest) + \"_\" + str(T) + \"_\" + str(epsilon) + \"_\" + bias_string  + \"_\" + str(lambda0) + \"_\" + str(lambda1) + \"_\" + str(noise) + \"/std_output.txt' \\n\\n\"\n",
     "\tf.write('%s' % string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aa = np.load(\"./data/mnist_28_500_1000_1000_0.01_0.001_False_1.0_1.0_0.0/test_loss_1.npy\")\n",
+    "bb = np.load(\"./data/mnist_28_500_1000_1000_0.01_0.001_False_1.0_1.0_0.3/test_loss_1.npy\")\n",
+    "cc = np.load(\"./data/mnist_42_500_1000_1000_0.01_0.001_False_1.0_1.0_0.0/test_loss_1.npy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(aa)"
    ]
   },
   {
